--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,6 @@
-<h1>Welcoem to my app</h1>
-<p>Sign-up here <%= link_to "here", "#" %>.</p>
+<div class="jumbotron">
+	<h1>Welcome to my app</h1>
+	<p>
+		<%= link_to "Log In", "#", class: "btn btn-default btn-lg"  %>.</p>
+		<%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg"  %>.</p>
+</div>
